--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
 </head>
 
 <body>
-  <p>asfasdf</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4 col-md-6 col-lg-4">
+<div style="background-color:hotpink">column</div>        
+      </div>
+      <div class="col-sm-4 col-md-6 col-lg-4">
+<div style="background-color:hotpink">column</div>
+      </div>
+      <div class="col-sm-4 col-md-6 col-lg-4">
+<div style="background-color:hotpink">column</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
