--- a/index.html
+++ b/index.html
@@ -82,6 +82,38 @@
         <span class="currency">원</span>
       </div>
     </div>
+
+    <div>
+      <button type="button" class="btn-primary btn-32">버어트은</button>
+      <button type="button" class="btn-secondary btn-32">버어트은</button>
+      <button type="button" class="btn-outlined btn-32">버어트은</button>
+      <button type="button" class="btn-ghost btn-32">버어트은</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-40">버어트은</button>
+      <button type="button" class="btn-secondary btn-40">버어트은</button>
+      <button type="button" class="btn-outlined btn-40">버어트은</button>
+      <button type="button" class="btn-ghost btn-40">버어트은</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-48">버어트은</button>
+      <button type="button" class="btn-secondary btn-48">버어트은</button>
+      <button type="button" class="btn-outlined btn-48">버어트은</button>
+      <button type="button" class="btn-ghost btn-48">버어트은</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-55">버어트은</button>
+      <button type="button" class="btn-secondary btn-55">버어트은</button>
+      <button type="button" class="btn-outlined btn-55">버어트은</button>
+      <button type="button" class="btn-ghost btn-55">버어트은</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-55" disabled>버어트은</button>
+      <button type="button" class="btn-secondary btn-55" disabled>버어트은</button>
+      <button type="button" class="btn-outlined btn-55" disabled>버어트은</button>
+      <button type="button" class="btn-ghost btn-55" disabled>버어트은</button>
+    </div>
+
   </div>
 </body>
 
