--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
       <div class="select-group is-active">
         <select class="form-select">
           <option value="1">선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택
-            사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1</option>
+            사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1
+          </option>
           <option value="2">선택 사항 2</option>
           <option value="3">선택 사항 3</option>
           <option value="4">선택 사항 4</option>
@@ -133,6 +134,33 @@
       </div>
     </div>
 
+    <div>
+      <div class="pagination">
+        <button class="page-control page-prev" type="button">
+          <i class="ic-chevron"></i>
+        </button>
+        <ol class="page-list">
+          <li class="page-item">
+            <a href="/">1</a>
+          </li>
+          <li class="page-item">
+            <a href="/">2</a>
+          </li>
+          <li class="page-item">
+            <a href="/">3</a>
+          </li>
+          <li class="page-item">
+            <a href="/">4</a>
+          </li>
+          <li class="page-item is-active">
+            <a href="/">55</a>
+          </li>
+        </ol>
+        <button class="page-control page-next" type="button">
+          <i class="ic-chevron"></i>
+        </button>
+      </div>
+    </div>
   </div>
 </body>
 
