implement base_globals, modules_icons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <div class="container">
     <div class="div">
-      <strong class="tag-red">특가</strong>
-      <div class="tag-gray">무료배송</div>
+      <strong class="tag-red visually-hidden">특가</strong>
+      <div class="tag-gray visually-hidden">무료배송</div>
       <strong class="tag-green">첫 리뷰 두 배 적립</strong>
     </div>
     <div>
@@ -161,6 +161,8 @@
         </button>
       </div>
     </div>
+
+
   </div>
 </body>
 
