--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
               </h1>
 
-              <nav class="sm-hidden">
+              <nav class="gnb-nav sm-hidden">
                 <h2 class="visually-hidden">메뉴</h2>
                 <ul class="gnb-nav-list">
                   <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
@@ -42,7 +42,7 @@
                 </ul>
               </nav>
 
-              <button class="gnb-menu-button gnb-icon-button sm-only" type="button" aria-label="메뉴 열기 버튼">
+              <button class="gnb-icon-button is-menu sm-only" type="button" aria-label="메뉴 열기 버튼">
                 <i class="ic-menu"></i>
               </button>
 
@@ -56,7 +56,7 @@
               </div>
 
               <div class="button-group">
-                <button class="gnb-search-button gnb-icon-button lg-hidden" type="button" aria-label="검색창 열기 버튼">
+                <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
                   <i class="ic-search"></i>
                 </button>
 
