--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <input class="form-input" type="text" placeholder="스토어 검색">
               </div>
 
+              <!-- 로그인을 한 경우 -->
               <div class="button-group">
                 <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
                   <i class="ic-search"></i>
@@ -79,6 +80,21 @@
                   </div>
                 </button>
               </div>
+
+              <!-- 로그인을 하지 않은 경우 -->
+              <!-- <div class="button-group">
+                <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
+                  <i class="ic-search"></i>
+                </button>
+                <a class="gnb-icon-button is-cart" href="/" aria-laber="장바구니 페이지로 이동">
+                  <i class="ic-cart"></i>
+                </a>
+
+                <div class="gnb-auth sm-hidden">
+                  <a href="/">로그인</a>
+                  <a href="/">회원가입</a>
+                </div>
+              </div> -->
 
               <button class="sm-hidden btn-primary btn-40" type="button">
                 글쓰기
