--- a/index.html
+++ b/index.html
@@ -144,7 +144,65 @@
 
     <nav class="sidebar-nav">
       <h2 class="visually-hidden">메뉴</h2>
-      <div class="drawer-menu">
+
+      <div class="drawer-menu is-community is-open">
+        <button class="drawer-menu-button" type="button">
+          <i class="ic-community" aira-hidden></i>
+          커뮤니티
+          <i class="ic-chevron" aira-hidden></i>
+        </button>
+    
+        <div class="drawer-menu-content">
+          <ul class="drawer-menu-list">
+            <li class="drawer-menu-item">
+              <a href="/">
+                홈
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                팔로잉
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                사진
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                집들이
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                노하우
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                전문가집들이
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                셀프가이드
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                질문과답변
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                이벤트
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="drawer-menu is-store is-open">
         <button class="drawer-menu-button" type="button">
           <i class="ic-store" aira-hidden></i>
           스토어
@@ -170,8 +228,71 @@
             </li>
             <li class="drawer-menu-item">
               <a href="/">
+                베스트
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                오늘의딜
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                연휴특가
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                월동준비
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                리퍼마켓
+              </a>
+            </li>
+            <li class="drawer-menu-item is-active">
+              <a href="/">
                 기획전
                 <i class="ic-new" aria-label="새 기획"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="drawer-menu is-expert is-open">
+        <button class="drawer-menu-button" type="button">
+          <i class="ic-expert" aira-hidden></i>
+          인테리어시공
+          <i class="ic-chevron" aira-hidden></i>
+        </button>
+    
+        <div class="drawer-menu-content">
+          <ul class="drawer-menu-list">
+            <li class="drawer-menu-item">
+              <a href="/">
+                업체찾기
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                간편상담
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                견적계산
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                이사
+              </a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">
+                설치/수리
               </a>
             </li>
           </ul>
