--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                 <i class="ic-search"></i>
                 <input class="form-input" type="text" placeholder="스토어 검색">
               </div>
+              <button class="btn-ghost btn-40" type="button">취소</button>
             </div>
-            <button class="btn-ghost btn-40" type="button">취소</button>
           </header>
           <section class="search-history">
             <header class="search-history-header">
@@ -353,7 +353,7 @@
             </header>
 
             <!-- 최근 검색어가 존재 할 경우 -->
-            <div class="search-history-content">
+            <!-- <div class="search-history-content">
               <ol class="search-history-list">
                 <li class="search-history-item">
                   <button class="word-button" type="button">검색1위</button>
@@ -374,7 +374,7 @@
                   </button>
                 </li>
               </ol>
-            </div>
+            </div> -->
 
             <!-- 최근 검색어가 존재 하지 않을 경우 -->
             <div class="search-history-content">
