--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                   <strong class="badge">5</strong>
                 </a>
 
-                <div class="my-menu sm-hidden">
-                  <button class="my-menu-button is-active" type="button" aria-label="마이메뉴 열기 버튼">
+                <div class="my-menu sm-hidden is-active">
+                  <button class="my-menu-button \" type="button" aria-label="마이메뉴 열기 버튼">
                     <img src="./assets/images/img-user-01.jpg" alt="4달라">
                   </button>
 
@@ -353,7 +353,7 @@
             </header>
 
             <!-- 최근 검색어가 존재 할 경우 -->
-            <!-- <div class="search-history-content">
+            <div class="search-history-content">
               <ol class="search-history-list">
                 <li class="search-history-item">
                   <button class="word-button" type="button">검색1위</button>
@@ -374,11 +374,11 @@
                   </button>
                 </li>
               </ol>
-            </div> -->
+            </div>
 
             <!-- 최근 검색어가 존재 하지 않을 경우 -->
-            <div class="search-history-content">
-              <p class="placeholder">최근 검색한 내역이 없습니다.</p>
+            <!-- <div class="search-history-content">
+              <p class="placeholder">최근 검색한 내역이 없습니다.</p> -->
             </div>
           </section>
         </div>
