--- a/index.html
+++ b/index.html
@@ -50,9 +50,41 @@
 
             <div class="gnb-right">
 
-              <div class="input-group lg-only">
-                <i class="ic-search" aria-hidden></i>
-                <input class="form-input" type="text" placeholder="스토어 검색">
+              <div class="gnb-search">
+                <div class="input-group lg-only">
+                  <i class="ic-search" aria-hidden></i>
+                  <input class="form-input" type="text" placeholder="스토어 검색">
+                </div>
+
+                <section class="search-history">
+                  <header class="search-history-header">
+                    <h2 class="title">최근 검색어</h2>
+                    <button type="button">전체 삭제</button>
+                  </header>
+      
+                  <div class="search-history-content">
+                    <ol class="search-history-list">
+                      <li class="search-history-item">
+                        <button class="word-button" type="button">검색1위</button>
+                        <button class="delete-button" type="button">
+                          <i class="ic-close" aria-label="검색어 삭제"></i>
+                        </button>
+                      </li>
+                      <li class="search-history-item">
+                        <button class="word-button" type="button">검색2위</button>
+                        <button class="delete-button" type="button">
+                          <i class="ic-close" aria-label="검색어 삭제"></i>
+                        </button>
+                      </li>
+                      <li class="search-history-item">
+                        <button class="word-button" type="button">검색3위</button>
+                        <button class="delete-button" type="button">
+                          <i class="ic-close" aria-label="검색어 삭제"></i>
+                        </button>
+                      </li>
+                    </ol>
+                  </div>
+                </section>
               </div>
 
               <!-- 로그인을 한 경우 -->
@@ -377,8 +409,8 @@
             </div>
 
             <!-- 최근 검색어가 존재 하지 않을 경우 -->
-            <!-- <div class="search-history-content">
-              <p class="placeholder">최근 검색한 내역이 없습니다.</p> -->
+            <div class="search-history-content">
+              <p class="placeholder">최근 검색한 내역이 없습니다.</p>
             </div>
           </section>
         </div>
