set .lg-only class to .gnb-search

--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 
             <div class="gnb-right">
 
-              <div class="gnb-search">
-                <div class="input-group lg-only">
+              <div class="gnb-search lg-only">
+                <div class="input-group">
                   <i class="ic-search" aria-hidden></i>
                   <input class="form-input" type="text" placeholder="스토어 검색">
                 </div>
 
-                <section class="search-history">
+                <section class="search-history is-active">
                   <header class="search-history-header">
                     <h2 class="title">최근 검색어</h2>
                     <button type="button">전체 삭제</button>
                   </header>
-      
+
                   <div class="search-history-content">
                     <ol class="search-history-list">
                       <li class="search-history-item">
