--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
         <div class="col-sm-4">
           <h1 class="visually-hidden">스토어 메뉴</h1>
           <ul class="lnb-list">
-            <li class="lnb-item">
+            <li class="lnb-item  is-active">
               <a href="/">
-                스토어홈
+                스토어
               </a>
             </li>
             <li class="lnb-item">
@@ -475,7 +475,7 @@
       </div>
     </div>
   </nav>
-  
+
   <div class="overlay" aria-hidden></div>
 </body>
 
