--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-  <header class="gnb">
+  <header class="global-header">
+  <div class="gnb">
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -147,7 +148,74 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <nav class="lnb">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <h1 class="visually-hidden">스토어 메뉴</h1>
+          <ul class="lnb-list">
+            <li class="lnb-item  is-active">
+              <a href="/">
+                스토어
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                카테고리
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                신혼가구
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                베스트
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                오늘의딜
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                연휴특가
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                월동준비
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                리퍼마켓
+              </a>
+            </li>
+            <li class="lnb-item">
+              <a href="/">
+                기획전
+                <i class="ic-new" aria-label="새 기획"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
   </header>
+
+  <main class="product-show">
+    <!-- 상품 상세페이지 -->
+  </main>
+
+  <footer class="global-footer">
+
+  </footer>
 
   <aside class="sidebar sm-only">
     <header class="sidebar-header">
@@ -417,64 +485,6 @@
       </div>
     </div>
   </aside>
-
-  <nav class="lnb">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <h1 class="visually-hidden">스토어 메뉴</h1>
-          <ul class="lnb-list">
-            <li class="lnb-item  is-active">
-              <a href="/">
-                스토어
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                카테고리
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                신혼가구
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                베스트
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                오늘의딜
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                연휴특가
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                월동준비
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                리퍼마켓
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                기획전
-                <i class="ic-new" aria-label="새 기획"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
 
   <div class="overlay" aria-hidden></div>
 </body>
