--- a/index.html
+++ b/index.html
@@ -21,110 +21,110 @@
 
 <body>
   <header class="global-header">
-  <div class="gnb">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
+    <div class="gnb">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
 
-          <div class="gnb-wrapper">
-            <div class="gnb-left">
-              <h1 class="logo">
-                <a href="/">
-                  <img src="assets/images/Logo.svg" alt="내일의 집 logo">
-                </a>
-              </h1>
+            <div class="gnb-wrapper">
+              <div class="gnb-left">
+                <h1 class="logo">
+                  <a href="/">
+                    <img src="assets/images/Logo.svg" alt="내일의 집 logo">
+                  </a>
+                </h1>
 
-              <nav class="gnb-nav sm-hidden">
-                <h2 class="visually-hidden">메뉴</h2>
-                <ul class="gnb-nav-list">
-                  <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                  <li class="gnb-nav-item is-active"><a href="/">스토어</a></li>
-                  <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
-                </ul>
-              </nav>
+                <nav class="gnb-nav sm-hidden">
+                  <h2 class="visually-hidden">메뉴</h2>
+                  <ul class="gnb-nav-list">
+                    <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                    <li class="gnb-nav-item is-active"><a href="/">스토어</a></li>
+                    <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                  </ul>
+                </nav>
 
-              <button class="gnb-icon-button is-menu sm-only" type="button" aria-label="메뉴 열기 버튼">
-                <i class="ic-menu"></i>
-              </button>
-
-            </div>
-
-            <div class="gnb-right">
-
-              <div class="gnb-search lg-only">
-                <div class="input-group">
-                  <i class="ic-search" aria-hidden></i>
-                  <input class="form-input" type="text" placeholder="스토어 검색">
-                </div>
-
-                <section class="search-history is-active">
-                  <header class="search-history-header">
-                    <h2 class="title">최근 검색어</h2>
-                    <button type="button">전체 삭제</button>
-                  </header>
-
-                  <div class="search-history-content">
-                    <ol class="search-history-list">
-                      <li class="search-history-item">
-                        <button class="word-button" type="button">검색1위</button>
-                        <button class="delete-button" type="button">
-                          <i class="ic-close" aria-label="검색어 삭제"></i>
-                        </button>
-                      </li>
-                      <li class="search-history-item">
-                        <button class="word-button" type="button">검색2위</button>
-                        <button class="delete-button" type="button">
-                          <i class="ic-close" aria-label="검색어 삭제"></i>
-                        </button>
-                      </li>
-                      <li class="search-history-item">
-                        <button class="word-button" type="button">검색3위</button>
-                        <button class="delete-button" type="button">
-                          <i class="ic-close" aria-label="검색어 삭제"></i>
-                        </button>
-                      </li>
-                    </ol>
-                  </div>
-                </section>
-              </div>
-
-              <!-- 로그인을 한 경우 -->
-              <div class="button-group">
-                <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
-                  <i class="ic-search"></i>
+                <button class="gnb-icon-button is-menu sm-only" type="button" aria-label="메뉴 열기 버튼">
+                  <i class="ic-menu"></i>
                 </button>
 
-                <a class="gnb-icon-button sm-hidden" href="/" aria-laber="스크랩북 페이지로 이동">
-                  <i class="ic-bookmark"></i>
-                </a>
-
-                <a class="gnb-icon-button sm-hidden" href="/" aria-laber="내소식 페이지로 이동">
-                  <i class="ic-bell"></i>
-                </a>
-
-                <a class="gnb-icon-button is-cart" href="/" aria-laber="장바구니 페이지로 이동">
-                  <i class="ic-cart"></i>
-                  <strong class="badge">5</strong>
-                </a>
-
-                <div class="my-menu sm-hidden is-active">
-                  <button class="my-menu-button \" type="button" aria-label="마이메뉴 열기 버튼">
-                    <img src="./assets/images/img-user-01.jpg" alt="4달라">
-                  </button>
-
-                  <div class="my-menu-content">
-                    <ul class="my-menu-list">
-                      <li class="my-menu-item"><a href="/">마이페이지</a></li>
-                      <li class="my-menu-item"><a href="/">나의 쇼핑</a></li>
-                      <li class="my-menu-item"><a href="/">이벤트</a></li>
-                      <li class="my-menu-item"><button type="button">로그아웃</button></li>
-                    </ul>
-                  </div>
-                </div>
               </div>
 
-              <!-- 로그인을 하지 않은 경우 -->
-              <!-- <div class="button-group">
+              <div class="gnb-right">
+
+                <div class="gnb-search lg-only">
+                  <div class="input-group">
+                    <i class="ic-search" aria-hidden></i>
+                    <input class="form-input" type="text" placeholder="스토어 검색">
+                  </div>
+
+                  <section class="search-history is-active">
+                    <header class="search-history-header">
+                      <h2 class="title">최근 검색어</h2>
+                      <button type="button">전체 삭제</button>
+                    </header>
+
+                    <div class="search-history-content">
+                      <ol class="search-history-list">
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">검색1위</button>
+                          <button class="delete-button" type="button">
+                            <i class="ic-close" aria-label="검색어 삭제"></i>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">검색2위</button>
+                          <button class="delete-button" type="button">
+                            <i class="ic-close" aria-label="검색어 삭제"></i>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">검색3위</button>
+                          <button class="delete-button" type="button">
+                            <i class="ic-close" aria-label="검색어 삭제"></i>
+                          </button>
+                        </li>
+                      </ol>
+                    </div>
+                  </section>
+                </div>
+
+                <!-- 로그인을 한 경우 -->
+                <div class="button-group">
+                  <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
+                    <i class="ic-search"></i>
+                  </button>
+
+                  <a class="gnb-icon-button sm-hidden" href="/" aria-laber="스크랩북 페이지로 이동">
+                    <i class="ic-bookmark"></i>
+                  </a>
+
+                  <a class="gnb-icon-button sm-hidden" href="/" aria-laber="내소식 페이지로 이동">
+                    <i class="ic-bell"></i>
+                  </a>
+
+                  <a class="gnb-icon-button is-cart" href="/" aria-laber="장바구니 페이지로 이동">
+                    <i class="ic-cart"></i>
+                    <strong class="badge">5</strong>
+                  </a>
+
+                  <div class="my-menu sm-hidden is-active">
+                    <button class="my-menu-button \" type="button" aria-label="마이메뉴 열기 버튼">
+                      <img src="./assets/images/img-user-01.jpg" alt="4달라">
+                    </button>
+
+                    <div class="my-menu-content">
+                      <ul class="my-menu-list">
+                        <li class="my-menu-item"><a href="/">마이페이지</a></li>
+                        <li class="my-menu-item"><a href="/">나의 쇼핑</a></li>
+                        <li class="my-menu-item"><a href="/">이벤트</a></li>
+                        <li class="my-menu-item"><button type="button">로그아웃</button></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- 로그인을 하지 않은 경우 -->
+                <!-- <div class="button-group">
                 <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
                   <i class="ic-search"></i>
                 </button>
@@ -138,75 +138,75 @@
                 </div>
               </div> -->
 
-              <button class="sm-hidden btn-primary btn-40" type="button">
-                글쓰기
-                <i class="ic-chevron" aria-hidden></i>
-              </button>
+                <button class="sm-hidden btn-primary btn-40" type="button">
+                  글쓰기
+                  <i class="ic-chevron" aria-hidden></i>
+                </button>
 
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <nav class="lnb">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <h1 class="visually-hidden">스토어 메뉴</h1>
-          <ul class="lnb-list">
-            <li class="lnb-item  is-active">
-              <a href="/">
-                스토어
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                카테고리
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                신혼가구
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                베스트
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                오늘의딜
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                연휴특가
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                월동준비
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                리퍼마켓
-              </a>
-            </li>
-            <li class="lnb-item">
-              <a href="/">
-                기획전
-                <i class="ic-new" aria-label="새 기획"></i>
-              </a>
-            </li>
-          </ul>
+    <nav class="lnb">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h1 class="visually-hidden">스토어 메뉴</h1>
+            <ul class="lnb-list">
+              <li class="lnb-item  is-active">
+                <a href="/">
+                  스토어
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  카테고리
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  신혼가구
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  베스트
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  오늘의딜
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  연휴특가
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  월동준비
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  리퍼마켓
+                </a>
+              </li>
+              <li class="lnb-item">
+                <a href="/">
+                  기획전
+                  <i class="ic-new" aria-label="새 기획"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </header>
 
   <main class="product-show">
@@ -214,7 +214,49 @@
   </main>
 
   <footer class="global-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <h3 class="global-footer-title">
+            고객센터
+            <i class="ic-chevron" aria-hidden></i>
+          </h3>
+          <a class="global-footer-contact" href="tel:1004-1004">1004-1004</a>
+          <p class="global-footer-time">
+            평일 09:00 ~ 18:00 (주말 &amp; 공휴일 제외)
+          </p>
 
+          <dl class="global-footer-detail-list">
+            <div class="global-footer-detail-item">
+              <dt>상호명</dt>
+              <dd>버그가 너무 많아 김버그</dd>
+            </div>
+            <div class="global-footer-detail-item">
+              <dt>이메일</dt>
+              <dd>
+                <address>
+                  <a href="mailto:kimbugx@gmail.com">kimbugx@gmail.com</a>
+                </address>
+                (제휴문의)
+              </dd>
+            </div>
+            <div class="global-footer-detail-item">
+              <dt>대표이사</dt>
+              <dd>김버그</dd>
+            </div>
+            <div class="global-footer-detail-item">
+              <dt>주소</dt>
+              <dd>
+                <address>
+                  <a href="https://www.youtube.com/c/kimbug" target="_blank">
+                    https://www.youtube.com/c/kimbug</a>
+                </address>
+              </dd>
+            </div>
+          </dl>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <aside class="sidebar sm-only">
