--- a/index.html
+++ b/index.html
@@ -211,6 +211,23 @@
 
   <main class="product-show">
     <!-- 상품 상세페이지 -->
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="breadcrumb">
+            <a href="/">가전</a>
+            <i class="ic-chevron" aria-label></i>
+            <a href="/">계절가전</a>
+            <i class="ic-chevron" aria-label></i>
+            <a href="/">전기히터/온풍기</a>
+            <i class="ic-chevron" aria-label></i>
+            <a href="/">전기히터</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </main>
 
   <footer class="global-footer">
