--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -232,7 +233,7 @@
             <div class="product-carousel-slider">
               <ol class="slider-list">
                 <li 
-                  classa="slider-item" 
+                  class="slider-item" 
                   role="tabpanel" 
                   aria-labelledby="product-carousel-tab-1">
                   <figure>
@@ -241,7 +242,7 @@
                   </figure>
                 </li>
                 <li 
-                  classa="slider-item" 
+                  class="slider-item" 
                   role="tabpanel" 
                   aria-labelledby="product-carousel-tab-2">
                   <figure>
@@ -250,7 +251,7 @@
                   </figure>
                 </li>
                 <li 
-                  classa="slider-item" 
+                  class="slider-item" 
                   role="tabpanel" 
                   aria-labelledby="product-carousel-tab-3">
                   <figure>
@@ -259,7 +260,7 @@
                   </figure>
                 </li>
                 <li 
-                  classa="slider-item" 
+                  class="slider-item" 
                   role="tabpanel" 
                   aria-labelledby="product-carousel-tab-4">
                   <figure>
@@ -620,6 +621,9 @@
   </aside>
 
   <div class="overlay" aria-hidden></div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+  <script src="js/productCarousel.js"></script>
 </body>
 
 </html>
