--- a/components.html
+++ b/components.html
@@ -95,9 +95,7 @@
   <div>
     <div class="select-group is-active">
       <select class="form-select">
-        <option value="1">선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택
-          사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1 선택 사항 1
-        </option>
+        <option value="1">선택 사항 1</option>
         <option value="2">선택 사항 2</option>
         <option value="3">선택 사항 3</option>
         <option value="4">선택 사항 4</option>
