--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <div class="col-sm-4 col-lg-8">
           <section class="product-section product-spec" id="product-spec" role="tabpanel">
             <header class="product-section-header">
-              <h1 class="title">상품 정보</h1>
+              <h1 class="title sm-hidden">상품 정보</h1>
             </header>
 
             <div class="product-section-content">
