score-stats에 bar-graph 클래스 추가

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                         4점
                       </dt>
                       <dd>
-                        <div aria-hidden>
+                        <div class="bar-graph" aria-hidden>
                           <div class="active-bar"></div>
                         </div>
                         <strong class="count" aria-label="87명">87</strong>
@@ -638,7 +638,7 @@
                         3점
                       </dt>
                       <dd>
-                        <div aria-hidden>
+                        <div class="bar-graph" aria-hidden>
                           <div class="active-bar"></div>
                         </div>
                         <strong class="count" aria-label="13명">13</strong>
@@ -650,7 +650,7 @@
                         2점
                       </dt>
                       <dd>
-                        <div aria-hidden>
+                        <div class="bar-graph" aria-hidden>
                           <div class="active-bar"></div>
                         </div>
                         <strong class="count" aria-label="0명">0</strong>
@@ -662,7 +662,7 @@
                         1점
                       </dt>
                       <dd>
-                        <div aria-hidden>
+                        <div class="bar-graph" aria-hidden>
                           <div class="active-bar"></div>
                         </div>
                         <strong class="count" aria-label="0명">0</strong>
