--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                         <img src="assets/images/img-user-01.jpg" alt="4달라">
                       </a>
                       <div class="info">
-                        <a class="user-name" href="/">
+                        <a class="username" href="/">
                           <strong>사딸라</strong>
                         </a>
                         <div class="detail">
