shipment table 마크업

--- a/index.html
+++ b/index.html
@@ -957,7 +957,8 @@
                       <div class="inquiry-content">
                         <span aria-label="문의 내용">Q</span>
                         <p>
-                          상품받았는데 사용하면서 보니까 불들어오는곳 옆에 하얀 부분이 갈색으로 얼룩져있는데 불량인가요...? 위험하지는 않겠죠? 다른분들 후기사진에는 다 깨끗한 것 같아서요! 사진첨부가없어서 텍스트로 설명하려 하니 애매하네요ㅠㅠ
+                          상품받았는데 사용하면서 보니까 불들어오는곳 옆에 하얀 부분이 갈색으로 얼룩져있는데 불량인가요...? 위험하지는 않겠죠? 다른분들 후기사진에는 다 깨끗한 것 같아서요!
+                          사진첨부가없어서 텍스트로 설명하려 하니 애매하네요ㅠㅠ
                         </p>
                       </div>
                     </div>
@@ -1086,6 +1087,60 @@
             </div>
           </section>
           <div class="product-section-divider sm-only" aria-hidden></div> -->
+
+          <div id="product-shipment" role="tabpanel">
+            <section class="product-section">
+              <header class="product-section-header">
+                <h1 class="title">배송</h1>
+              </header>
+
+              <div class="product-section-content">
+                <table class="product-table">
+                  <tbody>
+                    <tr>
+                      <th scope="row">배송</th>
+                      <td>일반택배</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">배송비</th>
+                      <td>무료배송</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">배송불가 지역</th>
+                      <td>배송불가 지역이 없습니다.</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
+
+            <section class="product-section">
+              <header class="product-section-header">
+                <h1 class="title">교환/환불</h1>
+              </header>
+
+              <div class="product-section-content">
+                <table class="product-table">
+                  <tbody>
+                    <tr>
+                      <th scope="row">반품배송비</th>
+                      <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">교환배송비</th>
+                      <td>5,000원</td>
+                    <tr>
+                      <th scope="row">보내실 곳</th>
+                      <td>(00000) 서울 종로구 누하동</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
+          </div>
+
         </div>
       </div>
     </div>
