side-bar toggle 작업

--- a/index.html
+++ b/index.html
@@ -1745,7 +1745,7 @@
     <nav class="sidebar-nav">
       <h2 class="visually-hidden">메뉴</h2>
 
-      <div class="drawer-menu is-community is-open">
+      <div class="drawer-menu is-community">
         <button class="drawer-menu-button" type="button">
           <i class="ic-community" aira-hidden></i>
           커뮤니티
@@ -1802,7 +1802,7 @@
           </ul>
         </div>
       </div>
-      <div class="drawer-menu is-store is-open">
+      <div class="drawer-menu is-store">
         <button class="drawer-menu-button" type="button">
           <i class="ic-store" aira-hidden></i>
           스토어
@@ -1861,7 +1861,7 @@
         </div>
       </div>
 
-      <div class="drawer-menu is-expert is-open">
+      <div class="drawer-menu is-expert">
         <button class="drawer-menu-button" type="button">
           <i class="ic-expert" aira-hidden></i>
           인테리어시공
@@ -2111,6 +2111,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="js/carousels.js"></script>
   <script src="js/sidebar.js"></script>
+  <script src="js/sidebar-drawer.js"></script>
 </body>
 
 </html>
